@@ -6,7 +6,9 @@ import ok.dht.ServiceConfig;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
@@ -19,12 +21,13 @@ public final class ServerImpl {
 
     public static void main(String[] args)
             throws IOException, ExecutionException, InterruptedException, TimeoutException {
-        int port = 42342;
-        String url = "http://localhost:42342" + port;
-        Path path = Files.createTempDirectory("data");
-        ServiceConfig cfg = new ServiceConfig(port, url, Collections.singletonList(url), path);
+        int port = Integer.parseInt(args[Integer.parseInt(args[3])]);
+        String url = "http://localhost:" + port;
+        Path path = Files.createTempDirectory("data" + args[3]);
+        ServiceConfig cfg1 = new ServiceConfig(port, url, List.of("http://localhost:" + args[0], "http://localhost:" + args[1], "http://localhost:" + args[2]), path);
         ServiceImpl.Factory factory = new ServiceImpl.Factory();
-        Service server = factory.create(cfg);
+
+        Service server = factory.create(cfg1);
         server.start().get(1, TimeUnit.SECONDS);
     }
 }
